api docs: Prepended /api/v1 to API URI's instead of /api
